fixing alignment issues, removing phone background, cleaner style

--- a/src/components/notificationsPane/NotificationsPane.scss
+++ b/src/components/notificationsPane/NotificationsPane.scss
@@ -3,13 +3,13 @@
 .notify-pane {
   background-color: $footerGray;
   width: 100%;
-  height: 64.15vh;
+  height: 100%;
   overscroll-behavior: contain;
-  right: -400px;
+  right: -490px;
   position: absolute;
   transition: 40ms ease-in-out;
-  top: 1rem;
-  z-index: 100;
+  top: 4.4rem;
+  z-index: 10000;
 
   @-webkit-keyframes slide {
     100% {
